--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,13 +2,13 @@ name: CI Checks & Build
 
 on:
   push:
-    branches: ["main"]
+    branches: ['main']
   pull_request:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: "CI Build"
+    name: 'CI Build'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -16,12 +16,8 @@ jobs:
       - name: NPM Install
         run: npm install --silent
 
-      - name: Lint Check
-        run: npm run lint
-
       - name: Bundle
         run: |
-          export NODE_OPTIONS=--openssl-legacy-provider
           npm run build
 
       - name: Add dist bundle
