--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "k6-reporter",
+  "type": "module",
   "version": "2.4.0",
   "description": "Export K6 test summary as a HTML report",
+  "author": "Josh Larminay",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jlarminay/k6-reporter.git"
@@ -12,20 +15,18 @@
     "reporting"
   ],
   "scripts": {
-    "build": "webpack",
-    "lint": "eslint src && prettier --check src",
-    "lint-fix": "eslint src --fix && prettier --write src"
+    "build": "vite build",
+    "test": "start-server-and-test test:server 50051 test:k6",
+    "test:k6": "docker run -it --rm -v .:/input -v .:/output grafana/k6 run --out json=/output/tests/results.json /input/tests/test.js",
+    "test:server": "node tests/server.js"
   },
-  "author": "Josh Larminay",
-  "license": "MIT",
   "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0",
-    "eslint": "^7.22.0",
-    "prettier": "^2.2.1",
-    "webpack": "^5.11.0",
-    "webpack-cli": "^4.3.0"
-  },
-  "dependencies": {
-    "ejs": "^3.1.6"
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
+    "npm-check-updates": "^18.0.1",
+    "prettier": "^3.5.3",
+    "start-server-and-test": "^2.0.11",
+    "vite": "^6.3.5",
+    "vite-plugin-ejs": "^1.7.0"
   }
 }
